[tool.poetry]
name = "minitask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
