[tool.poetry]
name = "minitask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
gunicorn = "^20.0.4"
dj_database_url = "^0.5.0"
whitenoise = "^5.2.0"
psycopg2-binary = "^2.8.5"
django-optimistic-lock = "^1.0.0"
django-taggit = "^1.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"
pylint-django = "^2.3.0"
ddquery = "^0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
